--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Foodify</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="recipe_fragment">Recipe</string>
+    <string name="food_joke_fragment">Joke</string>
+    <string name="favourite_recipes_fragment">Favourites</string>
 </resources>
