--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="recipe_fragment">Recipe</string>
     <string name="food_joke_fragment">Joke</string>
     <string name="favourite_recipes_fragment">Favourites</string>
+    <string name="no_internet_connection">No Internet Connection.</string>
 </resources>
