--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,31 @@
     <string name="food_joke_fragment">Joke</string>
     <string name="favourite_recipes_fragment">Favourites</string>
     <string name="no_internet_connection">No Internet Connection.</string>
+    <string name="main_course">Main Course</string>
+    <string name="side_dish">Side Dish</string>
+    <string name="dessert">Dessert</string>
+    <string name="appetizer">Appetizer</string>
+    <string name="salad">Salad</string>
+    <string name="bread">Bread</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="soup">Soup</string>
+    <string name="beverage">Beverage</string>
+    <string name="souce">Souce</string>
+    <string name="marinade">Marinade</string>
+    <string name="fingerfood">FingerFood</string>
+    <string name="snack">Snack</string>
+    <string name="drink">drink</string>
+    <string name="meal_type">Meal Type</string>
+    <string name="diet_type">Diet Type</string>
+    <string name="gluten_free">Gluten Free</string>
+    <string name="ketogenic">Ketogenic</string>
+    <string name="vegetarian">Vegetarian</string>
+    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
+    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
+    <string name="whole30">Whole30</string>
+    <string name="primal">Primal</string>
+    <string name="paleo">Paleo</string>
+    <string name="pescetarian">Pescetarian</string>
+    <string name="vegan">Vegan</string>
+    <string name="apply">Apply</string>
 </resources>
