search view implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="pescetarian">Pescetarian</string>
     <string name="vegan">Vegan</string>
     <string name="apply">Apply</string>
+    <string name="search">Search</string>
 </resources>
