--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,9 @@
     <string name="vegan">Vegan</string>
     <string name="apply">Apply</string>
     <string name="search">Search</string>
+    <string name="title">Title</string>
+    <string name="cheap">Cheap</string>
+    <string name="healthy">Healthy</string>
+    <string name="dairy_free">Dairy Free</string>
+    <string name="_100">100</string>
 </resources>
