--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="dairy_free">Dairy Free</string>
     <string name="_100">100</string>
     <string name="save_to_favourites">Save to Favourites</string>
+    <string name="no_favourite_recipes">No Favourite Recipes.</string>
 </resources>
