--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="_100">100</string>
     <string name="save_to_favourites">Save to Favourites</string>
     <string name="no_favourite_recipes">No Favourite Recipes.</string>
+    <string name="delete_favourite_menu">Delete Favourite Menu</string>
 </resources>
