delete all favourite recipes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="save_to_favourites">Save to Favourites</string>
     <string name="no_favourite_recipes">No Favourite Recipes.</string>
     <string name="delete_favourite_menu">Delete Favourite Menu</string>
+    <string name="delete_all">Delete All</string>
 </resources>
